--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -24,7 +24,7 @@
         position: relative;
 
         @media (max-width: $phone) {
-            height: 280px;
+            height: 270px;
         }
     }
 
